--- a/package.json
+++ b/package.json
@@ -1,31 +1,15 @@
 {
   "name": "skeletonJS",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+  "version": "0.0.1",
+  "bin": {
+    "skeleton": "bin/skeleton"
   },
   "dependencies": {
-    "express": "~4.9.0",
-    "body-parser": "*",
-    "cookie-parser": "*",
-    "morgan": "*",
-    "serve-favicon": "*",
-    "debug": "*",
-    "jade": "*",
-    "stylus": "*",
-    "nib": "*",
-    "circumflex-request": "*"
+    "nomnom": "*",
+    "underscore": "*",
+    "async": "*",
+    "prompt": "*",
+    "fs-extra": "*"
   },
-  "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-jade": "*",
-    "tiny-lr": "*",
-    "gulp-stylus": "*",
-    "gulp-livereload": "*",
-    "gulp-imagemin": "*",
-    "gulp-concat": "*",
-    "gulp-webserver": "*",
-    "connect-livereload": "*"
-  }
+  "devDependencies": {}
 }
